welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:7: error: illegal start of simple expression
while(){
      ^RunHalf:14: error: ')' expected but '}' found.
}
^